// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get user info by id 1`] = `
Object {
  "displayName": "Alexandre",
  "likecoinId": "likecoin_id_1",
  "wallet": "address 1",
}
`;

exports[`get users list 1`] = `
Array [
  Object {
    "displayName": "Alexandre",
    "likecoinId": "likecoin_id_1",
    "wallet": "address 1",
  },
  Object {
    "displayName": "Pooya",
    "likecoinId": "likecoin_id_2",
    "wallet": "address 2",
  },
  Object {
    "displayName": "Sébastien",
    "likecoinId": "likecoin_id_3",
    "wallet": "address 3",
  },
]
`;
